Tercer commit en pie de pagina

--- a/index.html
+++ b/index.html
@@ -10,4 +10,5 @@
     <h1>Seminario de Git y GitHub</h1>
     <p>Primer párrafo</p>
 </body>
+<footer> - Derechos reservados 2022 - </footer>
 </html>
